1.0.2.1
* Legacy support for Java8